<resources>

    <string name="app_name">Philomathy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_a_user"> Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="description">Description</string>
    <string name="text">Post</string>
    <string name="image_preview">Image preview</string>
    <string name="upload">Upload</string>
    <string name="select_to_upload_images">Select to Upload Images</string>
    <string name="enter_text">Enter text</string>
    <string name="post">Post</string>
    <string name="upload_image">Upload</string>
    <string name="Title">Title</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_profile">My Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_sample">sample</string>
    <string name="logout">Logout</string>
    <string name="Choose_Tag">Choose Tag</string>
    <string name="dropdowntext">Choose Topic</string>
    <string name="select_category">Select Category</string>
    <string name="add_post">Add Post</string>
    <string name="choose_topic">Choose Topic</string>

    <string-array name="tags">
        <item>Programming Language</item>
        <item>Hardware Architecture</item>
        <item>Web Development</item>
        <item>Interview</item>
        <item>Others</item>
    </string-array>

</resources>