<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UploadActivity"

        >


        <Button
            android:id="@+id/postbutton"
            style="@style/appui"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:text="@string/post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964" />

        <ImageButton
            android:id="@+id/upload_button"
            android:layout_width="72dp"
            android:layout_height="49dp"
            android:contentDescription="@string/upload_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_input"
            app:layout_constraintVertical_bias="0.933"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/uploaded_view"
            android:layout_width="355dp"
            android:layout_height="256dp"

            android:contentDescription="@string/image_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_input"

            app:layout_constraintVertical_bias="0.107">

        </ImageView>

        <ProgressBar
            android:id="@+id/ProgressDialog"
            android:layout_width="112dp"
            android:layout_height="127dp"
            android:layout_marginBottom="300dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/upload_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/postdescript"
            android:layout_width="76dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="22dp"

            android:layout_weight="1"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/content_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.377" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Choose_Tag"
            app:layout_constraintBottom_toTopOf="@+id/content_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postdescript">


           <AutoCompleteTextView
               android:id="@+id/autoCompleteTextview"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:inputType="none"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_input"
            android:layout_width="350dp"
            android:layout_height="189dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="140"
            app:counterTextColor="@color/black"
            app:endIconMode="none"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:layout_weight="2"
                android:hint="@string/enter_text"
                android:textColorHint="#757575"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>




